Broaden suppression of upstream deprecated `pkg_resources` warning

--- a/template/pytest.ini
+++ b/template/pytest.ini
@@ -15,7 +15,6 @@ markers = slow
 # ignore:ImportDenier:ImportWarning: https://github.com/blakeNaccarato/copier-python/issues/319#issuecomment-1546359005
 # ignore:numpy.ndarray size changed:RuntimeWarning: https://github.com/blakeNaccarato/copier-python/issues/319#issuecomment-1546360423
 # ignore::DeprecationWarning:sphinx.util.images...sphinx_book_theme: https://github.com/blakeNaccarato/copier-python/issues/319#issuecomment-1591786172
-
 filterwarnings =
     error
     ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning
@@ -31,7 +30,7 @@ filterwarnings =
     ignore:Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning:jupyter_client.connect
     ignore:the file is not specified with any extension:UserWarning:papermill.iorw
     ignore:Passing unrecognized arguments to super:DeprecationWarning:traitlets.config.configurable
-    ignore:pkg_resources is deprecated as an API:DeprecationWarning:pkg_resources
+    ignore:pkg_resources is deprecated as an API:DeprecationWarning
     ignore:unclosed file:ResourceWarning:plumbum.commands.base
     ignore:Passing unrecognized arguments to super:DeprecationWarning:ipywidgets.widgets.widget
     ignore:`ipykernel.pylab.backend_inline` is deprecated:DeprecationWarning:ipykernel.pylab.backend_inline
