Use built-in `black[jupyter]` support over `nbqa`
https://github.com/blakeNaccarato/copier-python/issues/255#issuecomment-1463162383

--- a/template/.pre-commit-config.yaml
+++ b/template/.pre-commit-config.yaml
@@ -95,6 +95,7 @@ repos:
     rev: "23.7.0"
     hooks:
       - id: "black"
+      - id: "black-jupyter"
   - repo: "https://github.com/charliermarsh/ruff-pre-commit"
     rev: "v0.0.282"
     hooks:
@@ -135,7 +136,5 @@ repos:
   - repo: "https://github.com/nbQA-dev/nbQA"
     rev: "1.7.0"
     hooks:
-      - id: "nbqa-black"
-        additional_dependencies: ["black==23.7.0"]
       - id: "nbqa-ruff"
         additional_dependencies: ["ruff==0.0.282"]
