--- a/template/.pre-commit-config.yaml
+++ b/template/.pre-commit-config.yaml
@@ -114,19 +114,7 @@ repos:
           (?x)^(
             src/.*
             |tests/.*
-          )$
-      - id: "nb-clean"
-        name: "nb-clean (keep docs outputs)"
-        args:
-          - "--remove-empty-cells"
-          - "--preserve-cell-outputs"
-          - "--preserve-cell-metadata"
-          - "special"
-          - "tags"
-          - "--"
-        files: |
-          (?x)^(
-            docs/.*
+            |docs/.*
           )$
   - repo: "https://github.com/asottile/blacken-docs"
     rev: "1.16.0"
