Section the environment file

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
+# * -------------------------------------------------------------------------------- * #
+# * Changes below should persist in significant template updates.
+
+# * -------------------------------------------------------------------------------- * #
+# * Changes below may be lost in significant template updates.
+
 JUPYTER_PLATFORM_DIRS=1
 PIP_DISABLE_PIP_VERSION_CHECK=1
 PYDEVD_DISABLE_FILE_VALIDATION=1
