--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,9 +10,9 @@
     "*.tsx": "${capture}.ts",
     "tsconfig.json": "tsconfig.*.json",
     "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml",
-    "*.nest_tools_config": "coverage.xml, setup.ps1, update.ps1, *.code-workspace, *.prof, .copier-answers.yml, .coverage, .coveragerc, .env, .gitattributes, .gitmodules, .markdownlint.yaml, .pre-commit-config.yaml, .pytest_cache, .sourcery.yaml, codecov.yml, pyrightconfig.json, pytest.ini, pythonrc.py, renovate.json, *.jinja",
-    "*.nest_md": "*.md.jinja, LICENSE.jinja",
-    ".nest_tools_config_top": "coverage.xml, setup.ps1, update.ps1, *.code-workspace, *.prof, .copier-answers.yml, .coverage, .coveragerc, .env, .gitattributes, .gitmodules, .markdownlint.yaml, .pre-commit-config.yaml, .pytest_cache, .sourcery.yaml, codecov.yml, pyrightconfig.json, pytest.ini, pythonrc.py, renovate.json",
+    "*.nest_tools_config": "coverage.xml, setup.ps1, update.ps1, *.code-workspace, *.prof, .copier-answers.yml, .coverage, .coveragerc, .env, first_time_setup.ps1, .gitattributes, .*ignore, .gitmodules, .markdownlint.yaml, *.lock, *.log, .pre-commit-config.yaml, .pytest_cache, .sourcery.yaml, codecov.yml, pyproject.toml, pyrightconfig.json, pytest.ini, pythonrc.py, renovate.json, *.jinja",
+    "*.nest_md": "*.md.jinja, CITATION.cff, LICENSE.jinja",
+    ".nest_tools_config_top": "coverage.xml, setup.ps1, update.ps1, *.code-workspace, *.prof, .copier-answers.yml, .coverage, .coveragerc, .env, first_time_setup.ps1, .gitattributes, .gitmodules, .markdownlint.yaml, *.lock, *.log, .pre-commit-config.yaml, .pytest_cache, .sourcery.yaml, codecov.yml, pyrightconfig.json, pytest.ini, pythonrc.py, renovate.json",
     ".nest_md_top": "*.md, LICENSE"
   },
   //* File associations
@@ -54,7 +54,7 @@
 
   //! Pylance
   "python.languageServer": "Pylance",
-  "python.analysis.diagnosticMode": "workspace",
+  "python.analysis.diagnosticMode": "openFilesOnly",
   "python.analysis.indexing": true,
   //? These are safer defaults which are overridden in `pyrightconfig.json`.
   "python.analysis.typeCheckingMode": "off",
@@ -86,19 +86,11 @@
   //* pytest
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
-  //* markdownlint
-  "markdownlint.config": {
-    "first-line-heading": false
-  },
   //* black
   "black-formatter.importStrategy": "fromEnvironment",
-  //? Ensure user setting args are cleared
-  "black-formatter.logLevel": "warn",
   "black-formatter.args": [],
   //* ruff
   "ruff.importStrategy": "fromEnvironment",
-  //? Ensure user setting args are cleared
-  "ruff.logLevel": "warn",
   "ruff.args": [],
 
   //! GitHub Actions
@@ -126,6 +118,17 @@
   "explorer.sortOrder": "foldersNestsFiles",
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.expand": false,
+  //* Exclude problematic files in Problems panel filter and elsewhere
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    //? Pylance notebook cell temp files that get picked up in Problems pane before deletion
+    "**/*pylance-notebook-cell*": true
+  },
   //* File icon associations
   "workbench.iconTheme": "vscode-icons",
   "vsicons.presets.hideExplorerArrows": true,
@@ -144,14 +147,15 @@
   //* Editor format on save and more. Can run "File: Save without formatting" to skip.
   "editor.formatOnType": true,
   "editor.formatOnSave": true,
-  "python.formatting.provider": "black",
   //* Enforce whitespace and newlines.
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
   "files.trimFinalNewlines": true,
   //* Periodically fetch changes to tracked repo. Don't confirm on push/pull.
   "git.autofetch": true,
+  "git.commandsToLog": ["commit", "push"],
   "git.confirmSync": false,
+  "git.ignoredRepositories": ["template", "typings"],
   //* Markdown editor moves jarringly when this is "true"
   "markdown.preview.scrollEditorWithPreview": false,
   //* Exclude
@@ -175,25 +179,22 @@
   //! Filetype specifics
   //* .ENV
   "[dotenv]": {
-    "editor.wordWrap": "wordWrapColumn",
+    "editor.wordWrap": "bounded",
     "rewrap.autoWrap.enabled": false
   },
   //* MD
   "[markdown]": {
     "editor.defaultFormatter": "DavidAnson.vscode-markdownlint",
-    "editor.wordWrap": "wordWrapColumn",
-    //? Roughly matches the width of GitHub Markdown
-    "editor.wordWrapColumn": 124,
-    "editor.rulers": [124],
+    "editor.wordWrap": "bounded",
     "rewrap.autoWrap.enabled": false
   },
   //* JSON
   "[json]": {
-    "editor.wordWrap": "wordWrapColumn",
+    "editor.wordWrap": "bounded",
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[jsonc]": {
-    "editor.wordWrap": "wordWrapColumn",
+    "editor.wordWrap": "bounded",
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   //* PYTHON
@@ -206,12 +207,12 @@
   },
   //* TXT
   "[plaintext]": {
-    "editor.wordWrap": "wordWrapColumn"
+    "editor.wordWrap": "bounded"
   },
   //* TOML
   "evenBetterToml.formatter.columnWidth": 88,
   "[toml]": {
-    "editor.wordWrap": "wordWrapColumn",
+    "editor.wordWrap": "bounded",
     "editor.defaultFormatter": "tamasfe.even-better-toml"
   },
   //* TSV
@@ -223,9 +224,10 @@
   "yaml.format.printWidth": 88,
   "[yaml]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.wordWrap": "wordWrapColumn"
+    "editor.wordWrap": "bounded"
   },
 
   //! Extension: Jupyter Notebooks
-  "jupyter.notebookFileRoot": "${workspaceFolder}"
+  "jupyter.notebookFileRoot": "${workspaceFolder}",
+  "jupyter.showVariableViewWhenDebugging": true
 }
