--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,6 +4,20 @@
 
 {
   "version": "2.0.0",
+  "inputs": [
+    // * -------------------------------------------------------------------------- * //
+    // * Changes below should persist in significant template updates.
+
+    // * -------------------------------------------------------------------------- * //
+    // * Changes below may be lost in significant template updates.
+
+    {
+      "id": "templateOptions",
+      "description": "Template options.",
+      "type": "pickString",
+      "options": ["", "-Defaults", "-Recopy", "-Recopy -Defaults"]
+    }
+  ],
   "tasks": [
     // * -------------------------------------------------------------------------- * //
     // * Changes below should persist in significant template updates.
@@ -14,42 +28,26 @@
     // * -------------------------------------------------------------------------- * //
     // * PROJECT SETUP * //
     {
-      "label": "setup: Compose pyproject.toml",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "python .tools/scripts/compose_pyproject.py"],
-      "icon": { "id": "file-symlink-directory" },
-      "problemMatcher": []
-    },
-    {
-      "label": "setup: Re-answer template questions",
-      "type": "process",
-      "command": "pwsh",
-      "args": [".tools/scripts/Update-Template.ps1"],
-      "icon": { "id": "file-symlink-directory" },
-      "problemMatcher": []
-    },
-    {
-      "label": "setup: Bump template",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", ".tools/scripts/Update-Template.ps1 -Remote -Force"],
+      "label": "setup: Copy template",
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh" } },
+      "command": ".tools/scripts/Copy-Template.ps1 ${input:templateOptions}",
       "icon": { "id": "file-symlink-directory" },
       "problemMatcher": []
     },
     {
       "label": "setup: Setup project",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["setup.ps1"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh" } },
+      "command": "setup.ps1",
       "icon": { "id": "file-symlink-directory" },
       "problemMatcher": []
     },
     {
       "label": "setup: Update project",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["update.ps1"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh" } },
+      "command": "update.ps1",
       "icon": { "id": "file-symlink-directory" },
       // "runOptions": {
       //   "runOn": "folderOpen"
@@ -57,13 +55,18 @@
       "problemMatcher": []
     },
     {
-      "label": "task: Remove *.rej",
-      "type": "process",
-      "command": "pwsh",
-      "args": [
-        "-Command",
-        "Get-ChildItem -Recurse -Filter *.rej | Remove-Item"
-      ],
+      "label": "setup: Perform first-time setup",
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh" } },
+      "command": "first_time_setup.ps1",
+      "icon": { "id": "file-symlink-directory" },
+      "problemMatcher": []
+    },
+    {
+      "label": "setup: Remove *.rej",
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "Get-ChildItem -Recurse -Filter *.rej | Remove-Item",
       "icon": { "id": "file-symlink-directory" },
       "problemMatcher": []
     },
@@ -72,17 +75,17 @@
     // * PRE-COMMIT * //
     {
       "label": "pre-commit",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "pre-commit"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "pre-commit",
       "icon": { "id": "git-commit" },
       "problemMatcher": []
     },
     {
       "label": "pre-commit: all",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "pre-commit run --all-files"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "pre-commit run --all-files",
       "icon": { "id": "git-commit" },
       "problemMatcher": []
     },
@@ -90,39 +93,10 @@
     // * -------------------------------------------------------------------------- * //
     // * GIT * //
     {
-      "label": "git: Push with tags",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "git push; git push --tags"],
-      "icon": { "id": "git-branch" },
-      "problemMatcher": []
-    },
-    {
-      "label": "git: Prepare to release new version",
-      "dependsOrder": "sequence",
-      "dependsOn": ["setup: Compose pyproject.toml", "git: Stage all files"],
-      "type": "process",
-      "command": "pwsh",
-      "args": [
-        "-Command",
-        "git commit -m 'Release ${input:version}'; git tag ${input:version}"
-      ],
-      "icon": { "id": "git-branch" },
-      "problemMatcher": []
-    },
-    {
       "label": "git: Rebase back to fork",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "git rebase -i --fork-point main"],
-      "icon": { "id": "git-branch" },
-      "problemMatcher": []
-    },
-    {
-      "label": "git: Stage all files",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "git add --all"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "git rebase -i --fork-point main",
       "icon": { "id": "git-branch" },
       "problemMatcher": []
     },
@@ -130,18 +104,18 @@
     // * -------------------------------------------------------------------------- * //
     // * BLACK * //
     {
-      "label": "task: black: Ignore magic comma in this file",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "black -C ${file}"],
+      "label": "black: Ignore magic comma in this file",
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "black -C ${file}",
       "icon": { "id": "code" },
       "problemMatcher": []
     },
     {
-      "label": "task: black: Ignore magic comma in all project files",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "black -C src tests"],
+      "label": "black: Ignore magic comma in all project files",
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "black -C src tests",
       "icon": { "id": "code" },
       "problemMatcher": []
     },
@@ -149,49 +123,61 @@
     // * -------------------------------------------------------------------------- * //
     // * OTHER TASKS * //
     {
+      "label": "task: format and clear notebook",
+      "dependsOrder": "sequence",
+      "dependsOn": ["task: format notebook"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "nbqa ruff --fix-only ${file}; nb-clean clean --remove-empty-cells --preserve-cell-metadata special tags -- ${file}; black ${file}",
+      "icon": { "id": "notebook" },
+      "problemMatcher": []
+    },
+    {
+      "label": "task: Run pytest with coverage",
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "pytest --cov --cov-report xml",
+      "icon": { "id": "type-hierarchy-sub" },
+      "problemMatcher": []
+    },
+    {
+      "label": "task: Invoke pyright",
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh" } },
+      "command": ".tools/scripts/Invoke-Pyright.ps1",
+      "icon": { "id": "type-hierarchy-sub" },
+      "problemMatcher": []
+    },
+    {
       "label": "task: sphinx-autobuild docs (preview)",
-      "type": "process",
-      "command": "pwsh",
-      "args": [
-        "-Command",
-        "sphinx-autobuild docs _site --watch README.md --watch CHANGELOG.md"
-      ],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "sphinx-build -Ean docs _site; sphinx-autobuild -n docs _site --watch **/*.md",
       "icon": { "id": "book" },
       "problemMatcher": []
     },
     {
       "label": "task: profile this file",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "python -m cProfile -o .prof ${file}"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "python -m cProfile -o .prof ${file}",
       "icon": { "id": "graph-line" },
       "problemMatcher": []
     },
     {
       "label": "task: view profile results with snakeviz",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "snakeviz .prof"],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "snakeviz .prof",
       "icon": { "id": "graph-line" },
       "problemMatcher": []
     },
     {
       "label": "task: autoflake current file",
-      "type": "process",
-      "command": "pwsh",
-      "args": [
-        "-Command",
-        "autoflake -i --remove-all-unused-imports --ignore-init-module-imports ${file}"
-      ],
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "autoflake -i --remove-all-unused-imports --ignore-init-module-imports ${file}",
       "icon": { "id": "code" },
-      "problemMatcher": []
-    },
-    {
-      "label": "task: pytest-cov: Generate coverage",
-      "type": "process",
-      "command": "pwsh",
-      "args": ["-Command", "pytest --cov --cov-report xml"],
-      "icon": { "id": "beaker" },
       "problemMatcher": []
     }
   ]
