--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,15 +9,10 @@ jobs:
       - uses: "actions/checkout@v3"
       - uses: "actions/setup-python@v4"
       - run: "python .tools/scripts/bump_requirements.py"
-      # Have to touch the file in a separate step before installing requirements
-      - name: "Create requirements_docs.txt"
-        run: "touch template/.tools/requirements/requirements_docs.txt"
-      - name: "Install CI requirements"
+      - name: "Test installation of template dev tools."
         run: |-
-          pip install --upgrade pip
-          pip install --upgrade setuptools wheel
-          pip install --requirement template/.tools/requirements/requirements_ci.txt
-          pip install --requirement template/.tools/requirements/requirements_docs.txt
+          python -m pip install --requirement 'template/.tools/requirements/requirements_core.txt'
+          python -m pip install --requirement 'template/.tools/requirements/requirements_ci.txt'
   bump_precommit:
     needs: ["test_installable"]
     runs-on: "ubuntu-latest"
