--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -28,9 +28,8 @@ jobs:
             .tools/requirements/requirements*.txt
       - name: "Install dependencies."
         run: |-
-          python -m pip install --upgrade pip
-          pip install --upgrade setuptools wheel
-          pip install --requirement .tools/requirements/requirements_ci.txt
+          python -m pip install --requirement '.tools/requirements/requirements_core.txt'
+          python -m pip install --requirement '.tools/requirements/requirements_ci.txt'
       - run: "python -m sphinx -T -E docs _site"
       - uses: "actions/upload-pages-artifact@v2"
   deploy:
