--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ first_time_setup.ps1
 # Don't commit code workspace files, which might be symlinked here
 *.code-workspace
 # Avoid committing local docs builds for previewing
+_build
 _site
 # If using Google Cloud Platform Workload Identity Federation, avoid committing keys
 # Ignore generated credentials from google-github-actions/auth
@@ -25,6 +26,12 @@ gha-creds-*.json
 
 # NPM/Node.JS because of Pyright CI/CD dependency
 node_modules/
+
+# * -------------------------------------------------------------------------------- * #
+# * Gitignore for MyST-NB
+
+jupyter_execute
+.jupyter_cache
 
 # * -------------------------------------------------------------------------------- * #
 # * Modifications to the below Python.gitignore
