--- a/.sourcery.yaml
+++ b/.sourcery.yaml
@@ -17,5 +17,6 @@ rule_settings:
   python_version: "3.11"
   enable: ["default"]
   disable:
-    - "remove-redundant-constructor-in-dict-union" # Explicit dict(zip(...)) is better
     - "move-assign" # False positives
+    - "remove-redundant-constructor-in-dict-union" # Explicit dict(zip(...)) is better
+    - "no-conditionals-in-tests" # Not a great heuristic
