--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,133 @@
+# * -------------------------------------------------------------------------------- * #
+# * Changes below should persist in significant template updates.
+
+# * -------------------------------------------------------------------------------- * #
+# * Changes below may be lost in significant template updates.
+
+[build-system]
+requires = ["flit_core==3.9.0"]
+build-backend = "flit_core.buildapi"
+
+[project]
+name = "copier_python"
+version = "0.0.0"
+description = "Copier template for Python projects."
+readme = "README.md"
+license = { file = "LICENSE" }
+requires-python = ">=3.11"
+classifiers = ["License :: OSI Approved :: MIT License"]
+dependencies = []
+
+[[project.authors]]
+name = "Blake Naccarato"
+email = "blake.naccarato@gmail.com"
+
+[project.urls]
+Changes = "https://blakeNaccarato.github.io/copier-python/changelog.html"
+Docs = "https://blakeNaccarato.github.io/copier-python"
+Home = "https://github.com/blakeNaccarato/copier-python"
+Tracker = "https://github.com/blakeNaccarato/copier-python/issues"
+
+[tool.fawltydeps]
+ignore_undeclared = ["rich"]
+ignore_unused = []
+
+[tool.fawltydeps.custom_mapping]
+ipykernel = ["IPython"]
+
 [tool.ruff]
 fix = true
-select = [ "ALL",]
-src = [ "src", "tests",]
+select = ["ALL"]
+src = ["src", "tests"]
 target-version = "py311"
-extend-exclude = [ "template", "typings", ".github", ".tools", ".venv",]
-ignore = [ "ANN", "ARG005", "C408", "COM", "D10", "D20", "D213", "D402", "DTZ", "E501", "EM", "ERA", "FBT", "F841", "G0", "INP001", "ISC", "PD013", "PD901", "PD011", "PGH003", "PLR0913", "PLR2004", "PLW2901", "RET", "S301", "TCH", "TRY003", "W2", "B018", "F821", "S101", "T201",]
-unfixable = [ "F601",]
+extend-exclude = ["typings", ".github"]
+ignore = [
+    # * ---------------------------------------------------------------------------- * #
+    # * Changes below should persist in significant template updates.
+
+    # * ---------------------------------------------------------------------------- * #
+    # * Changes below may be lost in significant template updates.
+
+    "ANN",     # Don't require type annotations
+    "ARG005",  # Allow unused lambda argument. For consistency across df pipelines.
+    "C408",    # Allow dict calls
+    "COM",     # Allow magic commas and magic missing commas
+    "D10",     # Missing docstrings
+    "D20",     # Don't reformat docstrings in these ways
+    "D213",    # Multi-line docstring summary should start at the second line
+    "D402",    # False positives for parens in first line
+    "DTZ",     # Timezones are important, but only contextually necessary.
+    "E501",    # Don't check line length. Black handles this.
+    "EM",      # Don't check for exception message issues
+    "ERA",     # False positives. Don't get rid of commented out code.
+    "FBT",     # Allow boolean "traps"
+    "FIX002",  # Allow TODOs
+    "F841",    # Don't check for or fix unused variables
+    "FLY002",  # Allow different string representations
+    "G0",      # Allow f-strings, etc. in Loguru logging
+    "INP001",  # False positives. Checks for packages missing `__init__.py`
+    "ISC",     # False positives. Implicit string concatenation is fine.
+    "PD013",   # Allow `stack` instead of `melt`. They're not a direct swap.
+    "PD101",   # Allow use of nunique(). False positives
+    "PD901",   # Allow `df` variable name. We are all consenting adults here.
+    "PD011",   # Allow use of `.values`. False positives.
+    "PGH003",  # Until black stops wrapping special ignores, let's allow bare
+    "PIE804",  # Allow dict unpack even if unnecessary, consisent for df.assign{**...}
+    "PLR0913", # Allow more than five function arguments
+    "PLR2004", # Allow magic values. This check is too sensitive
+    "PLW2901", # For loop variable
+    "RET",     # Return checks are flaky, Sourcery does fine analysing these paths
+    "S301",    # Don't warn about pickling. Allow me to shoot myself in the foot.
+    "TCH",     # Type checking linter doesn't play nicely with pydantic
+    "TD",      # Disable to-do validation. Too pedantic for now.
+    "TRY003",  # Allow long exception messages
+    "W2",      # Allow whitespace issues. Fixed automatically by black.
+    # * ---------------------------------------------------------------------------- * #
+    # * These Jupyter-specific ignores can't be per-file-ignores
+    # * https://nbqa.readthedocs.io/en/latest/known-limitations.html
+    "B018", # Allow "useless" expressions, which do suppress outputs in notebooks
+    "F821", # Allow undefined names, such as `display`
+    "S101", # Allow assert
+    "T201", # Allow print in notebooks
+]
+unfixable = [
+    # * ---------------------------------------------------------------------------- * #
+    # * Changes below should persist in significant template updates.
+
+    # * ---------------------------------------------------------------------------- * #
+    # * Changes below may be lost in significant template updates.
+
+    "F601", # Don't fix duplicate mapping keys
+]
 
 [tool.ruff.pydocstyle]
 convention = "google"
 
 [tool.ruff.isort]
+# * ---------------------------------------------------------------------------- * #
+# * Changes below should persist in significant template updates.
+
+# * ---------------------------------------------------------------------------- * #
+# * Changes below may be lost in significant template updates.
 split-on-trailing-comma = false
 
 [tool.ruff.per-file-ignores]
-"tests/**" = [ "ARG001", "S101",]
+"docs/**" = [
+    "E402", # Need to allow imports below patches in docs notebooks
+]
+"tests/**" = [
+    # * ---------------------------------------------------------------------------- * #
+    # * Changes below should persist in significant template updates.
+
+    # * ---------------------------------------------------------------------------- * #
+    # * Changes below may be lost in significant template updates.
+
+    "ARG001", # Allow unused arguments in tests
+    "S101",   # Allow assert in tests
+]
 
 [tool.ruff.flake8-bugbear]
-extend-immutable-calls = [ "typer.Argument", "typer.Option",]
+extend-immutable-calls = ["typer.Argument", "typer.Option"]
 
 [tool.ruff.pep8-naming]
-classmethod-decorators = [ "pydantic.validator",]
+classmethod-decorators = ["pydantic.validator"]
