--- a/renovate.json
+++ b/renovate.json
@@ -1,21 +1,25 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "description": "Establish base config, schedule, and manager defaults.",
-  "extends": [
-    "config:base",
-    "group:allNonMajor",
-    ":enablePreCommit",
-    ":preserveSemverRanges"
-  ],
+  "extends": ["config:base", ":enablePreCommit", ":disableRateLimiting"],
+  "dependencyDashboardApproval": false,
   "schedule": ["on the first day of the month"],
-  "enabledManagers": ["github-actions", "pip_requirements", "pre-commit"],
+  "git-submodules": {
+    "enabled": true
+  },
+  "enabledManagers": [
+    "git-submodules",
+    "github-actions",
+    "pip_requirements",
+    "pre-commit"
+  ],
+  "pip_requirements": {
+    "description": "Additionally monitor these files.",
+    "fileMatch": ["^\\.tools/requirements/*"]
+  },
   "github-actions": {
     "description": "Additionally monitor template GitHub actions.",
     "fileMatch": ["^template/\\.github/workflows/*"]
-  },
-  "pip_requirements": {
-    "description": "Additionally monitor template dev tooling.",
-    "fileMatch": ["^template/\\.tools/requirements/*"]
   },
   "pre-commit": {
     "description": "Additionally monitor pre-commit config.",
