Run as a post-commit hook since it touches submodules, which must be committed first.

--- a/template/.pre-commit-config.yaml
+++ b/template/.pre-commit-config.yaml
@@ -22,14 +22,12 @@ repos:
 
       - id: "core-update"
         name: "core-update"
+        stages: ["post-commit"]
+        always_run: true
         verbose: true
         pass_filenames: false
         language: "system"
         entry: "pwsh -Command python .tools/scripts/core_update.py"
-        files: |
-          (?x)^(
-            .*
-          )$
       - id: "update-warning-filters"
         name: "update-warning-filters"
         verbose: true
