--- a/template/.vscode/tasks.json
+++ b/template/.vscode/tasks.json
@@ -141,6 +141,22 @@
       "problemMatcher": []
     },
     {
+      "label": "task: run core update",
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "python .tools/scripts/core_update.py",
+      "icon": { "id": "graph" },
+      "problemMatcher": []
+    },
+    {
+      "label": "task: update warnings",
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "python .tools/scripts/warning_filters.py",
+      "icon": { "id": "graph" },
+      "problemMatcher": []
+    },
+    {
       "label": "task: Invoke pyright",
       "type": "shell",
       "options": { "shell": { "executable": "pwsh" } },
