--- a/template/.env
+++ b/template/.env
@@ -1,5 +1,8 @@
 PIP_DISABLE_PIP_VERSION_CHECK=1
-PYTHONSTARTUP=.tools/scripts/pythonstartup.py
 PYDEVD_DISABLE_FILE_VALIDATION=1
+PYTHONIOENCODING=utf-8:strict
+PYTHONSTARTUP=.tools/scripts/pythonstartup.py
+PYTHONUTF8=1
+PYTHONWARNDEFAULTENCODING=1
 # ! Don't edit below. `warning_filters.py` may trash any changes.
 PYTHONWARNINGS=default
