--- a/template/.env
+++ b/template/.env
@@ -10,3 +10,4 @@ PYTHONIOENCODING=utf-8:strict
 PYTHONSTARTUP=.tools/scripts/pythonstartup.py
 PYTHONUTF8=1
 PYTHONWARNDEFAULTENCODING=1
+PYTHONWARNINGS=ignore
