Allow template bumping to skip tests

--- a/template/.vscode/tasks.json
+++ b/template/.vscode/tasks.json
@@ -15,7 +15,15 @@
       "id": "templateOptions",
       "description": "Template options.",
       "type": "pickString",
-      "options": ["", "-Defaults", "-Recopy", "-Recopy -Defaults"]
+      "options": [
+        "",
+        "-Defaults",
+        "-Recopy",
+        "-Recopy -Defaults",
+        "-Defaults -NoVerify",
+        "-Recopy -NoVerify",
+        "-Recopy -Defaults -NoVerify"
+      ]
     }
   ],
   "tasks": [
