--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - uses: "actions/checkout@v4"
       - uses: "actions/setup-python@v4"
+        with:
+          python-version: "3.11"
       - run: "python .tools/scripts/bump_requirements.py"
       - uses: "stefanzweifel/git-auto-commit-action@v4"
         with:
