--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,9 +10,9 @@
     "*.tsx": "${capture}.ts",
     "tsconfig.json": "tsconfig.*.json",
     "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml",
-    "*.nest_tools_config": "coverage.xml, setup.ps1, update.ps1, *.code-workspace, *.prof, .copier-answers.yml, .coverage, .coveragerc, .env, first_time_setup.ps1, .gitattributes, .*ignore, .gitmodules, .markdownlint.yaml, *.lock, *.log, .pre-commit-config.yaml, .pytest_cache, .sourcery.yaml, codecov.yml, pyproject.toml, pyrightconfig.json, pytest.ini, pythonrc.py, renovate.json, *.jinja",
+    "*.nest_tools_config": "coverage.xml, setup.ps1, update.ps1, *.code-workspace, *.prof, .copier-answers.yml, .coverage, .coveragerc, .env, first_time_setup.ps1, .gitattributes, .*ignore, .gitmodules, .markdownlint-cli2.yaml, *.lock, *.log, .pre-commit-config.yaml, .pytest_cache, .sourcery.yaml, codecov.yml, pyproject.toml, pyrightconfig.json, pytest.ini, pythonrc.py, renovate.json, *.jinja",
     "*.nest_md": "*.md.jinja, CITATION.cff, LICENSE.jinja",
-    ".nest_tools_config_top": "coverage.xml, setup.ps1, update.ps1, *.code-workspace, *.prof, .copier-answers.yml, .coverage, .coveragerc, .env, first_time_setup.ps1, .gitattributes, .gitmodules, .markdownlint.yaml, *.lock, *.log, .pre-commit-config.yaml, .pytest_cache, .sourcery.yaml, codecov.yml, pyrightconfig.json, pytest.ini, pythonrc.py, renovate.json",
+    ".nest_tools_config_top": "coverage.xml, setup.ps1, update.ps1, *.code-workspace, *.prof, .copier-answers.yml, .coverage, .coveragerc, .env, first_time_setup.ps1, .gitattributes, .gitmodules, .markdownlint-cli2.yaml, *.lock, *.log, .pre-commit-config.yaml, .pytest_cache, .sourcery.yaml, codecov.yml, pyrightconfig.json, pytest.ini, pythonrc.py, renovate.json",
     ".nest_md_top": "*.md, LICENSE"
   },
   //* File associations
