--- a/template/pytest.ini
+++ b/template/pytest.ini
@@ -5,7 +5,7 @@
 # * -------------------------------------------------------------------------------- * #
 # * Changes below may be lost in significant template updates.
 
-addopts = -p no:legacypaths -r a
+addopts = --verbose -p no:legacypaths -r a
 testpaths = tests
 markers = slow
-filterwarnings = error
+cache_dir = .cache/.pytest_cache
