--- a/template/.env
+++ b/template/.env
@@ -10,3 +10,5 @@ PYTHONIOENCODING=utf-8:strict
 PYTHONSTARTUP=.tools/scripts/pythonstartup.py
 PYTHONUTF8=1
 PYTHONWARNDEFAULTENCODING=1
+# Necessary for tests to even run due to strict UTF mode above.
+PYTHONWARNINGS=ignore
